applications/nginx/app-repo/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    shared-gateway-access: "true"
