applications/nginx/app-repo/k8s/4_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: nginx
spec:
  hostnames:
  - nginx.endpoints.gateway-demos.cloud.goog
  parentRefs:
  - name: external-http
    namespace: gateway
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: nginx-service
      port: 80
